<resources>
    <string name="app_name">TimePal</string>
    <string name="onboarding_title">👋 Witaj w TimePal!</string>
    <string name="onboarding_description">Zarządzaj zadaniami, pokonuj presję czasu i analizuj swoją produktywność!</string>
    <string name="onboarding_start_button">ZACZYNAMY!</string>
    <string name="task_title">Tytuł zadania</string>
    <string name="task_description">Opis (opcjonalnie)</string>
    <string name="select_deadline">Kliknij, aby wybrać deadline</string>
    <string name="suggest_steps">🤖 Zasugeruj kroki</string>
    <string name="add_step">➕ Dodaj krok</string>
    <string name="save_task">✅ Zapisz zadanie</string>


</resources>